change state works

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
 		<script src="https://code.jquery.com/jquery.js"></script>
 
         {{!-- link to javascript file --}}
-		<script src=""></script>
+		<script src="/assets/js/burger_logic.js"></script>
 
         <title>Eat-Da-Burger!</title>
 
