--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
         {{!-- link to style sheet --}}
-		<link rel="stylesheet" href="" type="text/css" />
+		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
 
         {{!-- link to jQuery --}}
 		<script src="https://code.jquery.com/jquery.js"></script>
