got burger icon to shrink

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -2,10 +2,9 @@ body {
     background-color: #aad9be;
     text-align: center;
     line-height: 1.5;
-};
+}
 
 #burger_icon { 
-    /* why not working? */
     width: 150px;
-};
+}
 
