--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,20 +1,30 @@
 <img id="burger_icon" src="/assets/img/burger.jpg"/>
 <h1>Et-Da-Burger!</h1>
 
-<h2>Burgers you haven't eaten!</h2>
-{{#each burger}}
-    {{#unless devoured}}
-        {{> burgers/burger_block devoured=true}}
-    {{/unless}}
-{{/each}}
-<hr>
-<h2>Burgers you ate!</h2>
-{{#each burger}}
-    {{#if devoured}}
-        {{> burgers/burger_block devoured=false}}
-    {{/if}}
-{{/each}}
-<hr>
+<table style = "width: 70%">
+    <tr>
+        <th><h2>Burgers you haven't eaten!</h2></th>
+        <th><h2>Burgers you ate!</h2></th>
+    </tr>
+
+    <tr>
+        <th>
+            {{#each burger}}
+                {{#unless devoured}}
+                    {{> burgers/burger_block devoured=true}}
+                {{/unless}}
+            {{/each}}
+        </th>
+        <th>
+            {{#each burger}}
+                {{#if devoured}}
+                    {{> burgers/burger_block devoured=false}}
+                {{/if}}
+            {{/each}}
+        </th>
+    </tr>
+</table>
+
 <br>
 
 <h3>Get another burger?</h3>
