--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <img id="burger_icon" src="/assets/img/burger.jpg"/>
-<h1>Et-Da-Burger!</h1>
+<h1>Eat-Da-Burger!</h1>
 
 <table style = "width: 70%">
     <tr>
@@ -31,5 +31,5 @@
 <form class="create-form">
     <textarea id="burger_name"></textarea>
     <br>
-    <button type="submit">Get burger!</button>
+    <button class="btn btn-outline-info" type="submit">Get burger!</button>
 </form>
